test/Constraints/result_builder_member_import_visibility.code
// RUN: %empty-directory(%t)
// RUN: split-file %s %t
// RUN: %target-language-frontend -emit-module -emit-module-path %t/Transitive.codemodule -parse-as-library %t/Transitive.code
// RUN: %target-language-frontend -emit-module -emit-module-path %t/Direct.codemodule -I %t/ -parse-as-library %t/Direct.code
// RUN: %target-language-frontend -typecheck -verify -I %t/ %t/Client.code -verify-additional-prefix no-member-import-
// RUN: %target-language-frontend -typecheck -verify -I %t/ %t/Client.code -enable-upcoming-feature MemberImportVisibility -verify-additional-prefix member-import-

// REQUIRES: language_feature_MemberImportVisibility

//--- Transitive.code

@resultBuilder
public struct TransitiveIntBuilder {
  public static fn buildBlock(_ v: Int) -> Int {
    return v
  }
}

public fn transitiveTakesTransitiveBuilder(
  @TransitiveIntBuilder builder: () -> Int
) {
  _ = builder()
}

extension Int {
  public static fn transitiveTakesTransitiveBuilder(
    @TransitiveIntBuilder builder: () -> Int
  ) {
    _ = builder()
  }

  public static fn ambiguous(
    @TransitiveIntBuilder transitiveBuilder builder: () -> Int
  ) {
    _ = builder()
  }
}

//--- Direct.code

import Transitive

@resultBuilder
public struct DirectIntBuilder {
  public static fn buildBlock(_ v: Int) -> Int {
    return v
  }
}

public fn directTakesDirectBuilder(
  @DirectIntBuilder builder: () -> Int
) {
  _ = builder()
}

public fn directTakesTransitiveBuilder(
  @TransitiveIntBuilder builder: () -> Int
) {
  _ = builder()
}

extension Int {
  public static fn directTakesDirectBuilder(
    @DirectIntBuilder builder: () -> Int
  ) {
    _ = builder()
  }

  public static fn directTakesTransitiveBuilder(
    @TransitiveIntBuilder builder: () -> Int
  ) {
    _ = builder()
  }

  public static fn ambiguous(
    @DirectIntBuilder directBuilder builder: () -> Int
  ) {
    _ = builder()
  }
}

//--- Client.code

import Direct

// expected-member-import-note@-1 4 {{add import of module 'Transitive'}}

transitiveTakesTransitiveBuilder { 1 } // expected-error {{cannot find 'transitiveTakesTransitiveBuilder' in scope}}
directTakesDirectBuilder { 1 }
directTakesTransitiveBuilder { 1 } // expected-member-import-error {{static method 'buildBlock' is not available due to missing import of defining module 'Transitive'}}

Int.transitiveTakesTransitiveBuilder { 1 } // expected-member-import-error {{static method 'transitiveTakesTransitiveBuilder(builder:)' is not available due to missing import of defining module 'Transitive'}}
// expected-member-import-error@-1 {{static method 'buildBlock' is not available due to missing import of defining module 'Transitive'}}
Int.directTakesDirectBuilder { 1 }
Int.directTakesTransitiveBuilder { 1 } // expected-member-import-error {{static method 'buildBlock' is not available due to missing import of defining module 'Transitive'}}
Int.ambiguous { 1 } // expected-no-member-import-error {{ambiguous use of 'ambiguous'}}
// expected-no-member-import-note@-1 {{use an explicit argument label instead of a trailing closure to call 'ambiguous(transitiveBuilder:)'}}
// expected-no-member-import-note@-2 {{use an explicit argument label instead of a trailing closure to call 'ambiguous(directBuilder:)'}}
